# usbmidi-host

./: .gitignore  Cargo.toml  README.md  openocd_samd21.cfg  watch_rtt.sh
.cargo/: config
atsamd-usb-host/: Cargo.toml
atsamd-usb-host/src/: error.rs  host.rs  lib.rs  pipe.rs
atsamd-usb-host/src/pipe/: addr.rs  ctrl_pipe.rs  ext_reg.rs  pck_size.rs  regs.rs  status_bk.rs  status_pipe.rs  table.rs
runtime/: Cargo.toml
runtime/src/: allocator.rs  array_queue.rs  cxalloc.rs  exec.rs  lib.rs  log_defmt.rs  pri_queue.rs  resource.rs  time.rs
src/: main.rs  resource.rs
src/port/: mod.rs  usb.rs
sync-thumbv6m/: Cargo.toml  README.md
sync-thumbv6m/src/: array_queue.rs  lib.rs  pq.rs  spin.rs
sync-thumbv6m/src/alloc/: arc.rs  mod.rs
usb-host/: Cargo.toml
usb-host/src/: control.rs  descriptor.rs  device.rs  lib.rs
usb-host/src/class/: audio.rs
usbmidi-host/: Cargo.toml  README.md
usbmidi-host/.cargo/: config
usbmidi-host/src/: main.rs  usb_midi.rs
usbmidi-host/src/port/: serial.rs  usb.rs
woke/: Cargo.toml
woke/examples/: howdy.rs
woke/examples/single_task_executor/src/: main.rs
woke/src/: lib.rs
