[workspace]
members = ["runtime", "sync-thumbv6m", "usbmidi-host", "atsamd-usb-host", "usb-host", "woke"]
resolver = "2"

[profile.dev]
debug = true
opt-level = "z"
#lto = true
panic = "unwind"
#debug-assertions = true
#incremental = false
#opt-level = 3
#overflow-checks = true

[profile.release]
codegen-units = 1
opt-level = "z"
debug = true
lto = true
panic = "abort"
#rpath = false
