[package]
name = "atsamd-usb-host"
description = "usb-host driver support for Atmel SAMD* microcontrollers."
version = "0.2.0"
authors = ["Brian Cully <bjc@kublai.com>"]
edition = "2018"
license = "LGPL-3.0-or-later"
categories = ["no-std", "embedded", "hardware-support"]
keywords = ["usb", "usb-host", "hal", "peripheral"]
repository = "https://github.com/bjc/atsamd-21-host.git"
readme = "README.md"

[dependencies]
async-trait = "0.1"
usb-host = { path = "../usb-host" }
embedded-hal = "0.2"
atsamd-hal = "0.14"
cortex-m = "0.7"
embedded-time = "0.12"
defmt = "0.3"
hash32 = "0.2"
enumset = "1.0.8"
runtime = { path = "../runtime" }

[dev-dependencies.atsamd-hal]
version = "0.14"
features = ["samd21e"]

# Need to re-export features from atsamd-hal. If there were a
# compelling reason to merge this into there, this is it.
[features]
samd21g = ["atsamd-hal/samd21g"]
samd21e = ["atsamd-hal/samd21e"]
samd51 = ["atsamd-hal/samd51"]
samd51g = ["atsamd-hal/samd51g"]
samd51j = ["atsamd-hal/samd51j"]


