[package]
name = "usbmidi-host"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
heapless = "0.7"
nb = "0.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
atsamd-hal = { version = "0.14", features = ["usb", "samd21e-rt"] }

trinket_m0 = { version = "0.11", features = ["usb", "rt", "unproven"] }
#atsamd-usb-host = { path = "../../atsamd-usb-host", features = ["samd21e"] }
atsamd-usb-host = { path = "../atsamd-usb-host", features = ["samd21e"] }
usb-host = { path = "../usb-host" }
defmt = "0.3.0"
async-trait = "0.1.51"
atomic-polyfill = "0.1"

embedded-midi = { path = "../../embedded-midi", features = ["defmt"] }
runtime = { path = "../runtime" }

embedded-time = "0.12"
sync-thumbv6m = { path = "../sync-thumbv6m" }

hash32 = "0.2.1"
buddy-alloc = "0.4"



