[package]
name = "usbmidi-host"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal = "0.2"
heapless = "0.7"
nb = "0.1"
cortex-m = "0.7"
cortex-m-rt = "0.7"
atsamd-hal = { version = "0.14", features = ["usb", "samd21e-rt"] }

trinket_m0 = { version = "0.11", features = ["usb", "default", "unproven"] }

embedded-usb-host = { path = "../../usb-host", features = ["samd21e"] }
defmt = "0.3"

#embedded-midi = { git = "https://github.com/fralalonde/embedded-midi.git", branch = "main", features = ["defmt"] }
embedded-midi = { path = "../../embedded-midi", features = ["defmt"] }
runtime = { path = "../runtime" }




